<resources>
    <string name="app_name">Bichos Feos</string>
    <string name="title_activity_navegador_mantis" translatable="false">NavegadorMantis</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_galeria_mantis" translatable="false">GaleriaMantis</string>
    <string name="nombre_app">BICHOS</string>
    <string name="nombre_app1">FEOS</string>
    <string name="frag_imag_text">IMÁGENES</string>
    <string name="frag_info_text">INFORMACIÓN</string>
    <string name="frag_enlaces_text">ENLACES</string>
    <string name="frag_video_text" translatable="false">VIDEOS</string>
    <string name="frag_acerca_de_text">ACERCA DE</string>
    <string name="frag_idioma_text">IDIOMA</string>
    <string name="frag_pulga">Pulga de gato</string>
    <string name="frag_piojo">Piojo</string>
    <string name="frag_mosca">Mosca de la fruta</string>
    <string name="frag_mosquito">Ojo de un mosquito</string>
    <string name="frag_imagenes">Imágenes variadas</string>
    <string name="frag_imagenes1">Imágenes variadas</string>
    <string name="frag_imag_mantis">Mantis religiosa</string>
    <string name="frag_imag_avispas">Avispas, Abejas</string>
    <string name="frag_imag_escarabajos">Escarabajos</string>
    <string name="frag_imag_tabanos">Tábanos</string>
    <string name="frag_imag_gorgojos">Gorgojos</string>
    <string name="frag_imag_grillos">Grillos</string>
    <string name="frag_imag_Hormigas">Hormigas</string>
    <string name="frag_imag_moscas">Moscas</string>
    <string name="frag_imag_polillas">Polillas</string>
    <string name="frag_imag_saltamontes">Saltamontes</string>
    <string name="frag_imag_colore">Imágenes coloreadas</string>
    <string name="frag_imag_mantis2" translatable="false">Mantidae</string>
    <string name="frag_imag_avispas2" translatable="false">Hymenoptera</string>
    <string name="frag_imag_escarabajos2" translatable="false">Coleoptera</string>
    <string name="frag_imag_tabanos2" translatable="false">Tabanidae</string>
    <string name="frag_imag_gorgojos2" translatable="false">Curculionidae</string>
    <string name="frag_imag_grillos2" translatable="false">Gryllidae</string>
    <string name="frag_imag_Hormigas2" translatable="false">Formicidae</string>
    <string name="frag_imag_moscas2" translatable="false">Diptera</string>
    <string name="frag_imag_polillas2" translatable="false">Heterocera</string>
    <string name="frag_imag_saltamontes2" translatable="false">Caelifera</string>
    <string name="frag_teoria">Teoría</string>
    <string name="frag_tecnica">Tecnicas</string>
    <string name="frag_imagenes_info">Imágenes</string>
    <string name="espanol" translatable="false">Español</string>
    <string name="ingles" translatable="false">English</string>
    <string name="mantis">Mantis religiosa (Mantis religiosa religiosa)</string>
    <string name="mantis2">Mantis religiosa (Mantis religiosa religiosa)</string>
    <string name="mantis3">Mantis religiosa (Mantis religiosa religiosa)</string>
    <string name="mantis4">Mantis religiosa (Mantis religiosa religiosa)</string>
    <string name="mantis5">Mantis religiosa (Mantis religiosa religiosa)</string>
    <string name="mantis6">Mantis religiosa (Mantis religiosa religiosa)</string>
    <string name="mantis7">Mantis religiosa (Mantis religiosa religiosa)</string>
    <string name="avispa">Avispa Roja (Pepsini)</string>
    <string name="avispa2">Avispa (Hymenoptera)</string>
    <string name="avispa3">Abejorro carpintero (Xylocopa)</string>
    <string name="avispa4">Avispa excavadora (Sphex)</string>
    <string name="avispa5">Avispa parásita (Braconidae)</string>
    <string name="avispa6">Avispa parásita (Ichneumonidae)</string>
    <string name="avispa7">Avispa parásita (Ichneumonidae)</string>
    <string name="avispa8">Avispa parásita. Netelia producta (Tryphoninae)</string>
    <string name="escarabajo">Escarabajo polifago (Phalacridae)</string>
    <string name="escarabajo2">Mariquita (Coccinellidae)</string>
    <string name="escarabajo3">Mariquita, detalle de una pata (Coccinellidae)</string>
    <string name="escarabajo4">Escarabajo de suelo (Carabidae)</string>
    <string name="escarabajo5">Escarabajo pelotero (Scarabaeus viettei)</string>
    <string name="escarabajo6">Escarabajo clik de ojos (Alaus oculatus)</string>
    <string name="escarabajo7">Escarabajo Hércules del este (Dynastes tityus)</string>
    <string name="escarabajo8">Escarabajo longicornio (Cerambycidae)</string>
    <string name="escarabajo9">Cucaracha (Blattodea)</string>
    <string name="escarabajo10">Escarabajo rinoceronte (Dynastinae)</string>
    <string name="tabano">Tabano (Tabanidae)</string>
    <string name="tabano2">Tabano (Tabanidae)</string>
    <string name="tabano3">Tabano (Tabanidae)</string>
    <string name="tabano4">Tabano (Tabanidae)</string>
    <string name="tabano5">Tábano gigante (Tabanus sudeticus)</string>
    <string name="gorgojo">Gorgojo (Curculio nucum)</string>
    <string name="gorgojo2">Gorgojo (Curculio nucum)</string>
    <string name="gorgojo3">Gorgojo (Curculio nucum)</string>
    <string name="gorgojo4">Gorgojo del arroz (Sitophilus oryzae)</string>
    <string name="gorgojo5">Gorgojo del bambu (Dryophthorinae)</string>
    <string name="gorgojo6">Gorgojo Proecini (Orthotemnus longitarsus)</string>
    <string name="grillo">Grillo Camello (Rhaphidophoridae)</string>
    <string name="grillo2">Grillo topo del Norte (Gryllotalpidae)</string>
    <string name="grillo3">Grillo topo (Gryllotalpidae)</string>
    <string name="grillo4">Grillo topo (Gryllotalpidae)</string>
    <string name="grillo5">Grillo topo (Gryllotalpidae)</string>
    <string name="grillo6">Grillo topo (Gryllotalpidae)</string>
    <string name="grillo7">Grillo topo (Gryllotalpidae)</string>
    <string name="grillo8">Grillo topo (Gryllotalpidae)</string>
    <string name="grillo9">Grillo topo del Norte (Gryllotalpidae)</string>
    <string name="hormiga">Hormiga de felpa (Mutillidae)</string>
    <string name="hormiga2">Hormiga León (Myrmeleontidae)</string>
    <string name="hormiga3">Hormiga León (Myrmeleontidae)</string>
    <string name="hormiga4">Hormiga León (Myrmeleontidae)</string>
    <string name="hormiga5">Hormiga León (Myrmeleontidae)</string>
    <string name="hormiga6">Hormiga roja de fuego (Solenopsis invicta)</string>
    <string name="mosca">Mosca asesina (Asilidae)</string>
    <string name="mosca2">Mosca asesina (Asilidae)</string>
    <string name="mosca3">Mosca asesina (Asilidae)</string>
    <string name="mosca4">Mosca asesina (Dysmachus trigonus)</string>
    <string name="mosca5">Mosca asesina (Dysmachus trigonus)</string>
    <string name="mosca6">Mosca abeja (Bombylius)</string>
    <string name="mosca7">Mosca común (Musca domestica)</string>
    <string name="mosca8">Mosca de Midas (Mydidae)</string>
    <string name="polilla">Polilla halcón (Manduca quinquemaculata)</string>
    <string name="polilla2">Polilla común de la ropa (Tineola bisselliella)</string>
    <string name="polilla3">Polilla gris (Sphinx ligustri)</string>
    <string name="polilla4">Polilla gris (Sphinx ligustri)</string>
    <string name="polilla5">Polilla gris (Sphinx ligustri)</string>
    <string name="polilla6">Polilla gris (Sphinx ligustri)</string>
    <string name="polilla7">Polilla mosca (Clogmia albipunctata)</string>
    <string name="saltamontes">Saltamontes (Acrididae)</string>
    <string name="saltamontes2">Saltamontes (Acrididae)</string>
    <string name="saltamontes3">Saltamontes (Acrididae)</string>
    <string name="saltamontes4">Saltamontes (Acrididae)</string>
    <string name="saltamontes5">Saltamontes (Acrididae)</string>
    <string name="saltamontes6">Saltamontes (Acrididae)</string>
    <string name="saltamontes7">Saltamontes (Caelifera)</string>
    <string name="coloreadas">Acaro Aceria (Aceria anthocoptes)</string>
    <string name="coloreadas2">Acaro amarillo (Tydeidae Lorryia)</string>
    <string name="coloreadas3">Acaro del queso (Tyrophagus putrescentiae)</string>
    <string name="coloreadas4">Acaro falso de la sarna (Pyemotes tritici)</string>
    <string name="coloreadas5">Acaro pavo real (Tuckerella)</string>
    <string name="coloreadas6">Avispa parasita (Encyrtidae)</string>
    <string name="coloreadas7">Avispa parasitoide (Parasitica)</string>
    <string name="coloreadas8">Caballito del diablo (Pyrrhosoma nymphula)</string>
    <string name="coloreadas9">Chinche (Cimex lectularius)</string>
    <string name="coloreadas10">Escarabajo del maíz  (Tribolium castaneum)</string>
    <string name="coloreadas11">Gorgojo del cafe (Hypothenemus hampei)</string>
    <string name="coloreadas12">Gusano de seda (Bombyx mori)</string>
    <string name="dialogo_titulo">BICHOS FEOS</string>
    <string name="dialogo_info">\nEn esta app podrás ver imágenes realizadas con un microscopio electrónico de barrido (SEM)
    de diferentes insectos con un gran nivel de detalle. Están en la sección \"Imágenes\" y ordenados segun su orden taxonómico.
        También hay una selección de imágenes coloreadas.\n\nEn la seción \"Información\" encontrarás datos de como se realizan estas
        imágenes e información tecnica sobre los instrumentos
    usados.\n\nEn la sección \"Enlaces\" hay una selección de páginas web con información e imágenes algunas de las cuales han sido de donde he sacado las fotografías.\n\nEn la sección \"Videos\" tienes videos con animaciones en 3D coloreadas, dos tal, y como se ven realmente, y una selección de imagenes.\n\nSi quieres volver a ver este texto solo tienes que pulsar el icono de la App, en otras pantallas no te saldrá la información y ayuda hasta que no lo pulses.\n\n</string>
    <string name="dialogo_imagenes_titulo">IMÁGENES</string>
    <string name="dialogo_imagenes_texto">\nEn esta sección encontrarás imágenes realizadas con un microscópio electrónico de vacío (SEM) de diferentes insectos (mantis, avispas…).
        Todas las fotografías son ampliables.\nLa pantalla se puede girar en panorámico para un mejor visionado desde tablet.
        \n\nDada la obtención de las imágenes no siempre se ha podido establecer con exactitud el nombre de la especie concreta,
        es posible que haya algún error. Esta app no está hecha por un entomólogo (es una app, basicamente, de imágenes) y si alguien encuentra algún fallo lo puede notificar en la sección \'Acerca de\'.\n\nEn lo que respecta a los enlaces a la
        Wikipedia no siempre ha sido posible encontrar la entrada en español de la especie, por lo que se ha optado por enlazar a la Wikipedia en inglés.\n\n</string>
    <string name="dialogo_salir">Salir</string>
    <string name="dialogo_ayuda_titulo">AYUDA</string>
    <string name="dialogo_ayuda_texto">\nPara saber el nombre del insecto has de tocar la imagen. Una vez aparezca el nombre puedes pulsar el botón de la Wikipedia en donde
    encontrarás toda la información. \n\nTambien tienes un botón (el de la flecha) para bajarte todo el contenido en imagenes de la sección.
        Lo encontrarás en la sección \"Descargas\" de tu móvil. \n\nEl archivo
    se bajará en formato .zip y para verlo tendrás que descomprimirlo primero utilizando la app RAR.
        \n\nAqui te la puedes descargar desde Play Store: "https://play.google.com/store/apps/details?id=com.rarlab.rar"
    \n\nTodas las fotografías de esta sección estan sacadas de la pagina \"Ugly Bugs\" (en la sección de \'Enlaces\' se puede visitar la web) y no informan sobre la especie concreta de la que se trata.
        \n\nNo obstante, como todos los especimenes son de Oklahoma es de suponer que la especie es \'Mantis religiosa religiosa\'
        la cual es la más común (si no la única) en los EEUU.\n\n</string>
    <string name="logo" translatable="false">Logo</string>
</resources>