<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:elevation="5dp"
        android:orientation="horizontal"
        tools:targetApi="lollipop">

        <ImageView

            android:layout_width="30sp"
            android:layout_height="30sp"
            android:contentDescription="@string/logo"
            android:src="@drawable/bicho_00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogo_imagenes_titulo"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:clickable="true"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/dialogo_imagenes_texto"
                android:textColor="@android:color/black"
                android:textSize="@dimen/texto_dialogos" />

        </ScrollView>


    </LinearLayout>


</LinearLayout>